2008-05-27   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: gp_bayer_decode() -> gp_ahd_decode().

2007-06-24   Theodore Kilgore <kilgota@auburn.edu>
	* library.c: Several Sakar cameras added.

2007-06-24   Theodore Kilgore <kilgota@auburn.edu>
	* library.c:
	* sq905.c:
	* sq905.h: fixed compile warnings about signedness. 

2007-05-10   Marcus Meissner <marcus@jet.franken.de>

	* postprocess.c: Fixed some free() calls and some memory leaks.

2007-03-09   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Decompression support re-done. 
	* postprocess.c: Decompression support re-done. 	
	* sq905.c: Decompression support re-done. 
	* sq905.h: Decompression support re-done. 


2006-01-03  Hubert Figuiere  <hub@figuiere.net>

	* library.c: Shark 2-in-1 Mini
	             Request Ultra Slim

2005-05-18   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: raw photo download routine segfault fixed.

2005-05-18   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: Several improvements for SQ_MODEL_POCK_CAM
	* postprocess.c: Several improvements for SQ_MODEL_POCK_CAM	
	* sq905.c: Several improvements for SQ_MODEL_POCK_CAM, thanks to 
	Julius Schwartzenberg <julius@zgod.cjb.net> for exhaustive testing!

2005-05-18   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: bug in compressed photo routine fixed, found by 
	Cedric Cellier.

2005-04-17   Theodore Kilgore <kilgota@auburn.edu>

	* ChangeLog: Fixed some typos.

2005-04-16   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: fix sq_decompress() to handle Magpix B350
	* postprocess.c: fix sq_decompress() to handle Magpix B350	
	* sq905.h: fix sq_decompress() to handle Magpix B350
	* sq905.h: fix sq_decompress() to handle Magpix B350	

2005-04-12   Theodore Kilgore <kilgota@auburn.edu>

	* postprocess.c: small oops repaired in sq_decompress()	

2005-04-03   Theodore Kilgore <kilgota@auburn.edu>

	* library.c: improvements for compressed mode
	* postprocess.c: improvements for compressed mode	